add product detail

--- a/styles/components/filterPanel/allFilter.scss
+++ b/styles/components/filterPanel/allFilter.scss
@@ -3,10 +3,10 @@
   padding-right: 0.75rem;
   background-color: transparent;
   font-size: var(--font-size-300);
+  border-color: var(--color-gray-300);
   color: var(--color-text-default-100);
   border-width: 1px;
   border-radius: 3px;
-  border-color: transparent;
   height: 2.5rem;
   border-style: solid;
   cursor: pointer;
