--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -24,6 +24,12 @@
 @import "./components/filterPanel/toggleFilter.scss";
 @import "./components/productCard.scss";
 @import "./components/promoitons.scss";
+@import "./components/detailPage/imageGallery.scss";
+@import "./components/detailPage/infoSection.scss";
+@import "./components/detailPage/packageContent.scss";
+@import "./components/detailPage/packageBox.scss";
+@import "./components/detailPage/sellerInfo.scss";
+@import "./components/detailPage/review.scss";
 
 html,
 body {
