--- a/styles/components/layout/sub-navigation.scss
+++ b/styles/components/layout/sub-navigation.scss
@@ -8,9 +8,7 @@
       display: inline-block;
       .border-bottom {
         display: none;
-        border-bottom: 2px solid #f51c40;
-        border-width: 3px;
-        border-color: var(--color-primary-500);
+        border-bottom: 3px solid var(--color-primary-500);
         position: absolute;
         bottom: 0;
         left: 15%;
@@ -32,12 +30,15 @@
           color: var(--color-primary-500);
         }
       }
-
-      .dropdown-content {
-        display: none;
-      }
       &:hover .dropdown-content {
+        transform: scale(1);
+        transition: all 160ms ease;
+      }
+      .dropdown-content {
         position: absolute;
+        transform: scale(0);
+        transform-origin: 0px;
+        transform-origin: top left;
         background-color: white;
         min-width: 160px;
         box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
@@ -77,8 +78,10 @@
           }
         }
       }
+
       .dropdown-content-right {
         right: 0px;
+        transform-origin: top right;
       }
     }
   }
