--- a/styles/components/promoitons.scss
+++ b/styles/components/promoitons.scss
@@ -97,6 +97,7 @@
       transition: 0.6s ease;
       border-radius: 0 3px 3px 0;
       user-select: none;
+      z-index: 1;
     }
 
     .next {
